фича: успешно завершено тестирование pipeline в mock режиме + исправления
Mock Testing:
- Добавлены mock fixtures для B7_schedule и B8_validation
- Обновлен test_mock_all_steps.py - тестирование всех 8 шагов
- ✅ Все шаги B1-B8 работают корректно (6544 tokens, ~62000x быстрее real mode)
- Обновлен run_pipeline_mock.py - отключение backend логирования в mock режиме

Database:
- Исправлена миграция 001_initial_schema.py: llm_calls ARRAY(JSONB) → JSONB
- Это устраняет ошибку "column llm_calls is of type jsonb[] but expression is of type jsonb"

ML Services:
- step_logger.py: добавлена поддержка DISABLE_BACKEND_LOGGING env var
- Позволяет запускать mock тесты без доступа к backend БД
- Foreign key violations больше не блокируют тестирование

Test Results:
- Steps completed: 8/8
- Total time: 0.003s
- Avg time per step: 0.4ms
- Total LLM calls: 8
- Total tokens: 6544
- Speed vs Real mode: ~62000x faster

Статус: Mock pipeline полностью функционален, все шаги B1-B8 валидируются корректно

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       BACKEND_PORT: ${BACKEND_PORT:-8000}
     ports:
       - "${BACKEND_PORT:-8000}:8000"
+    volumes:
+      - ./backend:/app
     depends_on:
       - db
     networks:
@@ -52,7 +54,9 @@ services:
       ML_HOST: ${ML_HOST:-0.0.0.0}
       ML_PORT: ${ML_PORT:-8001}
     ports:
-      - "${ML_PORT:-8001}:8001"
+      - "8002:8001"
+    volumes:
+      - ./ml:/app
     networks:
       - nastavnik_network
     restart: unless-stopped
@@ -68,6 +72,10 @@ services:
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
     ports:
       - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+      - /app/.next
     depends_on:
       - backend
     networks:
