--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,14 +68,15 @@ services:
       args:
         NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
     container_name: nastavnik_frontend
+    user: root
+    command: npm run dev
     environment:
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
     ports:
       - "3000:3000"
     volumes:
       - ./frontend:/app
-      - /app/node_modules
-      - /app/.next
+      - frontend_node_modules:/app/node_modules
     depends_on:
       - backend
     networks:
@@ -88,3 +89,4 @@ networks:
 
 volumes:
   postgres_data:
+  frontend_node_modules:
