--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,14 +20,14 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.58.2",
-    "@types/node": "^20.11.0",
-    "@types/react": "^18.2.48",
+    "@types/node": "20.19.33",
+    "@types/react": "18.3.28",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "5.9.3"
   }
 }
