--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,6 +10,4 @@ services:
     volumes: []
 
   frontend:
-    command: npm run start
-    volumes:
-      - frontend_node_modules:/app/node_modules
+    volumes: []
