устранена проблема с локалхост на боевом сервере

--- a/.env.example
+++ b/.env.example
@@ -22,4 +22,6 @@ ML_HOST=0.0.0.0
 ML_PORT=8001
 
 # Frontend Configuration
-NEXT_PUBLIC_API_URL=http://localhost:8000
+# Оставить пустым в Docker: браузер использует relative URLs, Next.js проксирует на backend
+# Для bare `npm run dev` без Docker: http://localhost:8000
+NEXT_PUBLIC_API_URL=
