рефакторинг docker-compose: dev volumes → override.yml
   volumes: [] в prod-override не очищает базовые volumes (конкатенация),
   из-за чего ./frontend:/app монтировался в прод и затирал .next из образа.

   Решение — стандартный паттерн Docker Compose:
   - docker-compose.yml: базовая конфигурация без dev volumes
   - docker-compose.override.yml: dev volumes + npm run dev (авто-подхватывается локально)
   - docker-compose.prod.yml: оставлен для явного исключения override.yml в CI/CD

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,14 +1,5 @@
-# Production overrides: отключаем volume-монтирование исходного кода,
-# чтобы Docker layer cache для pip install работал корректно.
+# Production overrides.
 # Использование: docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d
-
-services:
-  backend:
-    volumes: []
-
-  ml:
-    volumes: []
-
-  frontend:
-    volumes: []
-    command: npm run start
+# docker-compose.override.yml при этом НЕ применяется автоматически.
+# Базовый docker-compose.yml уже не содержит dev volumes и dev command —
+# этот файл нужен только для prod-специфичных параметров (если потребуются).
