--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:16-alpine
@@ -32,8 +30,6 @@ services:
       BACKEND_PORT: ${BACKEND_PORT:-8000}
     ports:
       - "${BACKEND_PORT:-8000}:8000"
-    volumes:
-      - ./backend:/app
     depends_on:
       - db
     networks:
@@ -55,8 +51,6 @@ services:
       ML_PORT: ${ML_PORT:-8001}
     ports:
       - "8002:8001"
-    volumes:
-      - ./ml:/app
     networks:
       - nastavnik_network
     restart: unless-stopped
@@ -66,20 +60,12 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       args:
-        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-}
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
     container_name: nastavnik_frontend
-    user: root
-    command: npm run dev
     environment:
-      # Браузер подключается напрямую к backend по этому URL
-      # Локально: http://localhost:8000 (из .env)
-      # Прод: http://<IP_СЕРВЕРА>:8000 (GitHub Secret NEXT_PUBLIC_API_URL)
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-http://localhost:8000}
     ports:
       - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - frontend_node_modules:/app/node_modules
     depends_on:
       - backend
     networks:
