добавлены cors origins

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ POSTGRES_PORT=5432
 # Backend Configuration
 BACKEND_HOST=0.0.0.0
 BACKEND_PORT=8000
+# CORS: через запятую, без пробелов. Прод: добавить http://<IP>:3000
+CORS_ORIGINS=http://localhost:3000,http://frontend:3000
 ML_SERVICE_URL=http://ml:8001
 
 # ML Service Configuration
